@@ -2580,6 +2580,29 @@
                             </div>
                           </div>
                         </div>
+                        <div class="col-md-12 api_clients_row" id="api_cnapp_wiz_row">
+                          <div class="form-group">
+                            <label class="col-sm-3 control-label">{{ form.cnapp_wiz_client_id.label }}</label>
+                            <div class="col-sm-5">
+                              {{ form.cnapp_wiz_client_id }}
+                              {{ form.cnapp_wiz_client_id.errors|safe }}
+                            </div>
+                          </div>
+                          <div class="form-group">
+                            <label class="col-sm-3 control-label">{{ form.cnapp_wiz_client_secret.label }}</label>
+                            <div class="col-sm-5">
+                              {{ form.cnapp_wiz_client_secret }}
+                              {{ form.cnapp_wiz_client_secret.errors|safe }}
+                            </div>
+                          </div>
+                          <div class="form-group">
+                            <label class="col-sm-3 control-label">{{ form.cnapp_wiz_api_url.label }}</label>
+                            <div class="col-sm-5">
+                              {{ form.cnapp_wiz_api_url }}
+                              {{ form.cnapp_wiz_api_url.errors|safe }}
+                            </div>
+                          </div>
+                        </div>
                         <div class="col-md-12">
                           <div class="text-center mar-btm">
                             <button class="btn btn-warning" id="test_api_parser" type="button">
