@@ -6,6 +6,8 @@ and this project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0
 
 
 ## [Unreleased]
+### Added
+- [API_PARSER] [CNAPP_WIZ] New collector
 
 
 ## [2.33.1] - 2025-10-29
